[package]
name = "arf"
version = "0.1.0"
edition = "2021"
description = "Agent Reasoning Format - track AI reasoning alongside git"

[[bin]]
name = "arf"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
